# delphy

./: .codecov.yml  .gitignore  .gitmodules  .trivy-ignore-policy.rego  .trivyignore  AGENTS.md  AUTHORS  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  CheckGit.cmake  Dockerfile  Dockerfile.ci  Fix # Delphy trees generated and exclude uncertain dates  INSTALL.md  LICENSE  README.md  conanfile.txt  version.cpp.in  version.h  wasm.profile
.github/: dependabot.yml
.github/workflows/: ci.yml  cleanup.yml  security-scan.yml
core/: CMakeLists.txt  ancestral_tree_prober.cpp  ancestral_tree_prober.h  api.cpp  api.fbs  api.h  api_generated.h  beasty_input.cpp  beasty_input.h  beasty_output.cpp  beasty_output.h  cmdline.cpp  cmdline.h  coalescent.cpp  coalescent.h  dates.cpp  dates.h  delphy_output.cpp  delphy_output.h  distributions.h  estd.h  evo_hky.cpp  evo_hky.h  evo_model.cpp  evo_model.h  incremental_mcc_tree.cpp  incremental_mcc_tree.h  interval_set.h  io.cpp  io.h  mcc_tree.cpp  mcc_tree.h  mutations.h  newick.cpp  newick.h  phylo_tree.cpp  phylo_tree.h  phylo_tree_calc.cpp  phylo_tree_calc.h  pop_model.cpp  (+34 more)
doc/: dphy_file_format.md
packaging/: build-conda-env.yaml
patches/: abseil-deterministic-hash-iteration.patch
plans/: 2026-03-04-01-flexible-mu-prior.md  2026-03-04-02-better-initial-mu.md  2026-03-05-01-flexible-n0-prior.md  2026-03-05-02-allow-zero-and-one-steps.md  2026-03-05-03-flexible-g-prior.md  2026-03-10-01-flexible-skygrid-nbar-prior.md  2026-03-12-01-skygrid-knot-dates.md  2026-03-16-01-paranoid-cli-flag.md  2026-03-16-02-bulk-missation-iteration.md  2026-03-17-01-cache-ref-seq-derived-quantities.md  2026-03-18-01-consistent-linear-year-output.md  2026-03-24-01-cap-above-root-spr-proposal.md  2026-03-25-01-fix-sample-mutational-history-infinite-loop.md  2026-03-26-01-cap-root-displace-proposal.md  2026-03-26-02-cap-subtree-slide-proposal.md  2026-04-22-01-fix-gamma-q-nan-from-emscripten-broken-long-double.md  2026-04-23-01-enable-wasm-unit-tests.md  2026-04-24-01-exp-pop-model-low-pop-barrier.md  2026-04-29-01-deterministic-hash-containers.md  2026-05-04-01-better-tree-init-round1-utree-and-guide-tree.md  2026-05-07-01-adaptive-pruning-threshold.md  2026-05-07-02-better-tree-init-round2-rooting-and-conversion.md  2026-05-13-01-guide-tree-tiebreaking-and-branch-length.md  2026-05-15-01-better-tree-init-round3-guide-tree-reordering.md  2026-05-18-01-better-tree-init-round4-regression-rooting.md  2026-05-21-01-better-tree-init-round4bis-gls-regression-rooting.md  2026-06-04-01-better-tree-init-round4tris-marginal-likelihood-rooting.md  2026-06-10-01-fix-spurious-missing-site-deltas.md  2026-06-10-02-better-tree-init-round5-spr-refinement.md
tests/: CMakeLists.txt  ancestral_tree_prober_tests.cpp  api_tests.cpp  coalescent_tests.cpp  dates_tests.cpp  deterministic_abseil_containers_tests.cpp  distributions_tests.cpp  interval_set_tests.cpp  io_tests.cpp  missation_map_tests.cpp  no_bit_gen.h  no_bit_gen_tests.cpp  phylo_tree_calc_tests.cpp  phylo_tree_tests.cpp  pop_model_tests.cpp  safe_gamma_math_tests.cpp  scalable_coalescent_tests.cpp  scratch_space_tests.cpp  seq_vector_matchers.h  sequence_overlay_tests.cpp  sequence_tests.cpp  sequence_utils_tests.cpp  site_deltas_tests.cpp  site_states_tree_prober_tests.cpp  spr_move_tests.cpp  spr_study_tests.cpp  staircase_tests.cpp  tests_main.cpp  tree_editing_tests.cpp  tree_prober_tests.cpp  tree_tests.cpp  utree_tests.cpp  very_scalable_coalescent_tests.cpp
tools/: beast_trees_to_dphy.cpp  delphy.cpp  delphy_mcc.cpp  delphy_ui.cpp  delphy_wasm.cpp
tutorials/: delphy_workflow.ipynb  delphy_workflow_example.ipynb  delphy_workflow_sars_example.ipynb
